Removing state lastest for package install

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Ensure chrony is installed
   yum:
     name: '{{ role_chrony_required_packages }}'
-    state: latest
+    state: present
   notify: start_chrony
 
 - name: Deploy chrony configuration file
