--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,18 +4,20 @@
 ## It is tied to the templates/chrony.conf.j2 template file.
 role_chrony_chrony_dot_conf_parameters:
   server:
-    pool:
-      - server 0.rhel.pool.ntp.org iburst
-      - server 1.rhel.pool.ntp.org iburst
-      - server 2.rhel.pool.ntp.org iburst
-      - server 3.rhel.pool.ntp.org iburst
+    - server 0.rhel.pool.ntp.org iburst
+    - server 1.rhel.pool.ntp.org iburst
+    - server 2.rhel.pool.ntp.org iburst
+    - server 3.rhel.pool.ntp.org iburst
   drift_file: driftfile /var/lib/chrony/drift
   makestep: makestep 1.0 3
   rtcsync: rtcsync
   hwtimestamp: hwtimestamp *
   minsources: minsources 2
-  allow: allow 192.168.0.0/16
-  local: local stratum 10
+  #allow: allow 192.168.0.0/16
+  bindcmdaddress:
+    - 'bindcmdaddress 127.0.0.1'
+    - 'bindcmdaddress ::1'
+  # local: local stratum 10
   keyfile: keyfile /etc/chrony.keys
   logdir: logdir /var/log/chrony
   log: log measurements statistics tracking
