Updating and tidying up
- Mostly tidying up the role, files and docs.
- Added commented out values for molecule to use wth vagrant driver and
  libvirt provisioner.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   author: Kasra Amirsarvari
   description: Manage the installation and configuration of chrony for NTP
   company: N/A
-  license: "license (BSD, MIT)"
+  license: license (BSD, MIT)
   min_ansible_version: 2.4
   platforms:
     - name: Fedora
