--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,18 +1,30 @@
 ---
 dependency:
   name: galaxy
+
+### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
+# driver:
+#   name: vagrant
+#   provider:
+#     name: libvirt
+# platforms:
+#   - name: chrony-test-centos-7
+#     box: centos/7
+#     imemory: 1024
+#     cpus: 1
+
+### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
   - name: chrony-test-centos-7
     image: caseraw/ansible-molecule-centos:7
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    command: /usr/sbin/init
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
+
 provisioner:
   name: ansible
   config_options:
@@ -24,7 +36,9 @@ provisioner:
     converge: playbook.yml
 scenario:
   name: default
+lint:
+  name: yamllint
 verifier:
-  name: testinfra
+  name: ansible
   lint:
-    name: flake8
+    name: ansible-lint
