Tyding up some more

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,30 +1,6 @@
 ---
 dependency:
   name: galaxy
-
-### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
-# driver:
-#   name: vagrant
-#   provider:
-#     name: libvirt
-# platforms:
-#   - name: chrony-test-centos-7
-#     box: centos/7
-#     imemory: 1024
-#     cpus: 1
-
-### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
-driver:
-  name: docker
-platforms:
-  - name: chrony-test-centos-7
-    image: caseraw/ansible-molecule-centos:7
-    command: /usr/sbin/init
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-
 provisioner:
   name: ansible
   config_options:
@@ -38,7 +14,44 @@ scenario:
   name: default
 lint:
   name: yamllint
+
+### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
+# driver:
+#   name: vagrant
+#   provider:
+#     name: libvirt
+# platforms:
+#   - name: chrony-test-centos-7
+#     box: centos/7
+#     imemory: 1024
+#     cpus: 1
+#------------------------------------------------------------------------------
+
+### Use Docker driver (only a single 'driver' with given 'platforms' is allowed)
+driver:
+  name: docker
+platforms:
+  - name: chrony-test-centos-7
+    image: caseraw/ansible-molecule-centos:7
+    command: /usr/sbin/init
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
+#------------------------------------------------------------------------------
+
+### Use testinfra verifier with flake8 (only a single 'verifier' with given 'lint' is allowed)
 verifier:
   name: ansible
   lint:
     name: ansible-lint
+#------------------------------------------------------------------------------
+
+### Use testinfra verifier with flake8 (only a single 'verifier' with given 'lint' is allowed)
+# verifier:
+#   name: testinfra
+#   lint:
+#     name: flake8
+#------------------------------------------------------------------------------
+
+...
