--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,16 @@
 ---
-dist: bionic
-
 language: python
-python:
-  - "2.7"
-
 services:
   - docker
-
 install:
-  - docker build --rm -t local/ansible-molecule-centos:7 .
-  - docker images
-
+  - pip install --upgrade pip setuptools
+  - pip install molecule docker
 script:
-  - docker run -d --privileged=true -v /sys/fs/cgroup:/sys/fs/cgroup:ro local/ansible-molecule-centos:7
-  - docker run -it --privileged=true -v /sys/fs/cgroup:/sys/fs/cgroup:ro local/ansible-molecule-centos:7 /bin/bash -c 'uname -a'
-  - docker run -it --privileged=true -v /sys/fs/cgroup:/sys/fs/cgroup:ro local/ansible-molecule-centos:7 /bin/bash -c 'cat /etc/*release'
-  - docker run -it --privileged=true -v /sys/fs/cgroup:/sys/fs/cgroup:ro local/ansible-molecule-centos:7 /bin/bash -c 'sudo -l'
-  - docker run -it --privileged=true -v /sys/fs/cgroup:/sys/fs/cgroup:ro local/ansible-molecule-centos:7 /bin/bash -c 'python --version'
-  - docker ps -a
+  - python --version
+  - ansible --version
+  - molecule --version
+  - molecule test
 
-after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker tag local/ansible-molecule-centos:7 caseraw/ansible-molecule-centos:7
-  - docker push $DOCKER_USERNAME/ansible-molecule-centos:7
-
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
 ...
