Tidy iup travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,20 @@
 ---
 language: python
-python:
-  - 3.7
-services:
-  - docker
-cache: pip
+services: docker
 env:
   global:
-    namespace="caseraw"
+    - namespace="caseraw"
+    - role_name="ansible_role_chrony"
   matrix:
-    - image="ansible-molecule-centos" tag="latest"
-    - image="ansible-molecule-centos" tag="8"
     - image="ansible-molecule-centos" tag="7"
-    - image="ansible-molecule-fedora" tag="latest"
-    - image="ansible-molecule-fedora" tag="31"
-    - image="ansible-molecule-fedora" tag="30"
-    - image="ansible-molecule-fedora" tag="29"
+    - image="ansible-molecule-centos" tag="8"
+    - image="ansible-molecule-centos" tag="latest"
     - image="ansible-molecule-fedora" tag="28"
+    - image="ansible-molecule-fedora" tag="29"
+    - image="ansible-molecule-fedora" tag="30"
+    - image="ansible-molecule-fedora" tag="31"
+    - image="ansible-molecule-fedora" tag="latest"
+cache: pip
 install:
   - pip install --upgrade pip setuptools
   - pip install molecule docker
