Use CentOS 7 as version to test molecule locally

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,6 +3,11 @@ dependency:
   name: galaxy
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      remote_tmp: /tmp
+      stdout_callback: yaml
+      bin_ansible_callbacks: True
   lint:
     name: ansible-lint
   playbooks:
@@ -16,8 +21,8 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: "${role_name:-ansible_role_chrony}-${image:-ansible-molecule-centos}-${tag:-latest}"
-    image: "${namespace:-caseraw}/${image:-ansible-molecule-centos}:${tag:-latest}"
+  - name: "${role_name:-ansible_role_chrony}-${image:-ansible-molecule-centos}-${tag:-7}"
+    image: "${namespace:-caseraw}/${image:-ansible-molecule-centos}:${tag:-7}"
     command: "${cmd:-/usr/sbin/init}"
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
