Changing molecule fot v3 config

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,16 +8,13 @@ provisioner:
       remote_tmp: /tmp
       stdout_callback: yaml
       bin_ansible_callbacks: True
-  lint:
-    name: ansible-lint
   playbooks:
     converge: playbook.yml
 scenario:
   name: default
-lint:
-  name: yamllint
-  options:
-    config-file: molecule/default/yamllint.yml
+lint: |
+  yamllint . -c molecule/default/yamllint.yml -f auto -s
+  ansible-lint
 driver:
   name: docker
 platforms:
@@ -30,7 +27,5 @@ platforms:
     pre_build_image: True
 verifier:
   name: ansible
-  lint:
-    name: ansible-lint
 
 ...
